[tool.poetry]
name = "peds_post_discharge_agent"
version = "0.1.0"
description = "Pediatric post-discharge assistant using LangGraph + watsonx.ai."
readme = "README.md"


packages = [
  { include = "peds_post_discharge_agent", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain-ibm = "1.0.0"
langchain = "1.0.5"
langchain-community = "0.4.1"
ibm-watsonx-ai = "1.4.5"
pytest = "8.3.3"
chromadb = "^1.3.4"
langchain-chroma = "^1.0.0"
typer = "^0.20.0"
fastapi = "^0.121.2"
uvicorn = "^0.38.0"
python-multipart = "^0.0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
